apps/manifests/hashgenerator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-dep
  namespace: exercises

spec:
  replicas: 1

  selector:
    matchLabels:
      app: log

  template:
    metadata:
      labels:
        app: log

    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc

      containers:
        - name: log-writer
          image: ebrhoden/log-writter:0.0.2

          volumeMounts:
            - name: shared-storage
              mountPath: /shared

        - name: log-reader
          image: ebrhoden/log-reader:0.0.3

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: shared-storage
              mountPath: /shared
