apps/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pingpong

  template:
    metadata:
      labels:
        app: pingpong

    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc

      containers:
        - name: pingpong
          image: ebrhoden/pingpong_app:0.0.3

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: shared-storage
              mountPath: /shared
