apps/manifests/hashgenerator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-svc
  namespace: exercises

spec:
  selector:
    app: log

  ports:
    - port: 2345
      targetPort: 8080
