apps/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises

spec:
  selector:
    app: pingpong

  ports:
    - port: 2345
      targetPort: 8080
